--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Tarea:
             </aside>
 
         </div>
-        <footer><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>Este obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">licencia de Creative Commons Reconocimiento 4.0 Internacional</a>.</footer>
+        <footer><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Licencia de Creative Commons" style="border-width:0" width="160" height="62" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><span id="textoLicencia"> Este obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">licencia de Creative Commons Reconocimiento 4.0 Internacional</a>.</span></footer>
         <!--<div id="testing"><span class="fuente">A B C D E F G H I J K L M N O P Q R S T</span></div>-->
     </body>
 </html>
